tests/baselines/reference/jsFileCompilationTypeSyntaxOfVar.errors.txt
tests/cases/compiler/a.js(1,8): error TS8010: 'types' can only be used in a .ts file.


==== tests/cases/compiler/a.js (1 errors) ====
    var v: () => number;
           ~~~~~~~~~~~~
!!! error TS8010: 'types' can only be used in a .ts file.